[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kzemi-tools"
version = "0.1.0"
description = "ゼミ用データ分析ツール集"
requires-python = ">=3.10"
dependencies = ["pandas", "matplotlib", "seaborn", "japanize-matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]
